Add attendance vertical slice
